--- a/ProyectoPracticaII/Client/ProyectoPracticaII.Client.csproj
+++ b/ProyectoPracticaII/Client/ProyectoPracticaII.Client.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Pages\Motocicleta\" />
+    <Folder Include="Pages\PTaller\" />
   </ItemGroup>
 
 </Project>
